# point-approximator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  windows-mingw.yml  windows-release.yml
src/: main.cpp
src/app/: App.cpp  App.h  CMakeLists.txt
src/grid/: CMakeLists.txt  Grid.cpp  Grid.h
src/lavalamp/: CMakeLists.txt  lavalamp.cpp  lavalamp.h
src/point/: CMakeLists.txt  PointManager.cpp  PointManager.h
